<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/view_title"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/view_title"
                android:inputType="textAutoCorrect" />

            <TextView
                android:id="@+id/view_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/view_description" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/view_description"
                android:inputType="textMultiLine" />

            <RadioGroup
                android:id="@+id/RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/RadioBtnGiveaway"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/giveaway" />

                <RadioButton
                    android:id="@+id/RadioButtonExchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exchange" />

            </RadioGroup>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/choose_location"
                android:textAlignment="center" />

        </LinearLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            class="com.example.bartoszxxx.sundeal.WorkaroundMapFragment"
            android:layout_width="match_parent"
            android:layout_height="314dp" />

        <Button
            android:id="@+id/BtnInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/add" />

    </LinearLayout>

</ScrollView>